<resources>
    <string name="app_name">Vehicle Recognition</string>
    <string name="body_type">Body type: </string>
    <string name="van_mini"> VAN Mini</string>
    <string name="van_full"> VAN Full</string>
    <string name="tractor_standard"> Tractor Standard</string>
    <string name="tractor_trailer"> Tractor Trailer</string>
    <string name="suv_wagon"> SUV Wagon</string>
    <string name="suv_standard"> SUV Standard</string>
    <string name="suv_crossover"> SUV Crossover</string>
    <string name="sedan_wagon"> Sedan Wagon</string>
    <string name="sedan_standard"> Sedan Standard</string>
    <string name="sedan_sports"> Sedan Sports</string>
    <string name="sedan_convertible"> Sedan Convertible</string>
    <string name="sedan_compact"> Sedan Compact</string>
    <string name="motorcycle"> Motorcycle</string>
    <string name="missing"> Missing</string>
    <string name="antique"> Antique</string>
    <string name="car_image_description">Processed Car Image</string>
    <string name="no_internet">Ops, we could not find an active internet connection…</string>
    <string name="retry">Retry</string>
    <string name="copyRight">Project was created by Jasur Shukurov</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="take_picture_button_description">Take Picture Button</string>
    <string name="or">OR</string>
    <string name="select_from_gallery_button_description">Select from gallery button</string>
</resources>
